<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/doctors"
            android:icon="@drawable/ic_doctor"
            android:title="@string/view_doctors" />
        <item
            android:id="@+id/medicines"
            android:icon="@drawable/ic_medicine"
            android:title="@string/view_treatments" />
        <item
            android:id="@+id/hospitals"
            android:icon="@drawable/ic_hospital__1_"
            android:title="@string/find_dermatologist" />
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_signout"
            android:title="@string/sign_out" />
    </group>
</menu>